--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -9,7 +9,7 @@
 {{- $icon192 := "icons/icon-192x192.png" -}}
 {{- $manifest := "manifest.json" -}}
 {{- $bg := resources.Get (.Site.Params.bg | default "images/grey-prism.svg") -}}
-{{- $avatar := resources.Get (.Site.Params.avatar | default "images/avatar.png") -}}
+{{- $avatar := resources.Get (.Site.Params.avatar | default "images/avatar.webp") -}}
 {{- $style := resources.Get "styles/main.scss" | resources.ExecuteAsTemplate "styles/main-rendered.scss" . | resources.ToCSS | resources.Minify -}}
 {{- $customStyle := resources.Get (.Site.Params.customStyle | default "styles/custom.scss") | resources.ToCSS | resources.Minify -}}
 {{- $fontAwesome := "https://use.fontawesome.com/releases/v5.8.1/css/all.css" -}}
