--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,12 +1,12 @@
 {{- $wechat := resources.Get (.Site.Params.wechat | default "images/qrcode.jpg") -}}
-{{- $avatar := resources.Get (.Site.Params.avatar | default "images/avatar.png") -}}
+{{- $avatar := resources.Get (.Site.Params.avatar | default "images/avatar.webp") -}}
 
 <header class="site-header">
-  <a href="{{ .Site.BaseURL }}"><img class="avatar" src="{{ $avatar.RelPermalink }}" alt="Avatar"></a>
+  <img class="avatar" src="{{ $avatar.RelPermalink }}" alt="Avatar">
   {{  if eq .Kind "home" }}
-  <h1 class="title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h1>
+  <h1 class="title">{{ .Site.Title }}</h1>
   {{ else }}
-  <h2 class="title"><a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a></h2>
+  <h2 class="title">{{ .Site.Title }}</h2>
   {{ end }}
   <p class="subtitle">{{ .Site.Params.subtitle }}</p>
   <button class="menu-toggle" type="button" aria-label="Main Menu" aria-expanded="false" tab-index="0">
